# rust_container_test

./: Cargo.toml  Dockerfile  READEME.md  docker-compose.yml
assets/: script.js
src/: client.rs  main.rs
templates/: index.html
